# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  TicTacToe.sln
TicTacToe/: TicTacToe.vcxproj  TicTacToe.vcxproj.filters
TicTacToe/src/: Block.cpp  Block.h  main.cpp
include/: Application.h  Block.h  Board.h  Shared.h  TypeOfBlock.h  TypeOfPlayer.h
src/: Application.cpp  Block.cpp  Board.cpp  main.cpp
